--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,6 @@ h1 {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 .logo {
@@ -97,19 +96,25 @@ button:focus-visible {
 }
 
 .editor {
-  background: #fff;
+  background: #fffe;
   border-radius: 6px;
   box-shadow:
     0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12),
     0 3px 1px -2px rgba(0, 0, 0, 0.2);
   font-family: "Source Code Pro", monospace;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   min-height: 240px;
   letter-spacing: normal;
   line-height: 20px;
   padding: 10px;
   tab-size: 4;
-  width: 100%;
+
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  width: 320px;
+
+  z-index: 1;
 }
