--- a/src/style.css
+++ b/src/style.css
@@ -14,13 +14,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -37,71 +32,19 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  display: grid;
+  align-items: stretch;
+
+  grid-template-columns: 1fr 1fr;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+canvas {
+  width: 100vh;
+  height: 100vh;
 }
 
 .editor {
-  background: #fffe;
-  border-radius: 6px;
-  box-shadow:
-    0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12),
-    0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  background: #1e1e1e;
   font-family: "Source Code Pro", monospace;
   font-size: 12px;
   font-weight: 400;
@@ -111,16 +54,10 @@ button:focus-visible {
   padding: 10px;
   tab-size: 4;
 
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  width: 320px;
-
   overflow: auto;
-  max-height: calc(100vh - 64px);
+  max-height: 100vh;
 
   z-index: 1;
-  opacity: 0;
   transition: opacity 0.2s ease-in-out;
 }
 
@@ -140,5 +77,3 @@ button:focus-visible {
 .tp-dfwv:hover {
   opacity: 1;
 }
-
-
